Add Font Awesome and Google font link to header

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,12 @@
     <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
     <link rel="stylesheet" href="{{rootURL}}assets/ember-octane-monopoly.css">
 
+    <!-- Font Awesome CDN link -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    
+    <!-- Google font: Oswald -->
+    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+
     {{content-for "head-footer"}}
   </head>
   <body>
